Update application sheet form and capture

--- a/.env.example
+++ b/.env.example
@@ -8,3 +8,9 @@ SUBMISSIONS_PATH=/tmp/fundraising-pilot-applications.ndjson
 # GOOGLE_SHEET_TAB=Applications
 # GOOGLE_SERVICE_ACCOUNT_EMAIL=service-account@your-project.iam.gserviceaccount.com
 # GOOGLE_PRIVATE_KEY="your PEM private key string with \\n newlines"
+
+# Contact form email delivery (Resend)
+# RESEND_API_KEY=re_xxxxxxxxx
+# CONTACT_FROM_EMAIL=Fundraising Pilot <contact@yourdomain.com>
+# CONTACT_TO_EMAIL=you@yourdomain.com
+# CONTACT_SUBJECT_PREFIX=[Contact]
